Fix: Resolve issue with button text changing orientation on small screen

--- a/css/index.css
+++ b/css/index.css
@@ -248,15 +248,16 @@ footer {
   margin-bottom: 26px;
 }
 .home .walk .walk-text .btn {
-  padding: 0.5rem;
-  width: 30%;
-  height: 10%;
+  padding-top: 2rem;
   border-radius: 5px;
   margin-bottom: 3rem;
   text-align: center;
   color: #F6F6F6;
   background: #22283A;
   font-size: 2rem;
+  width: 2em;
+  height: 2.5em;
+  width: 30%;
 }
 .home .walk .walk-text .btn:hover {
   background-color: #2b334a;
@@ -309,15 +310,15 @@ footer {
     width: 100%;
   }
   .home .walk .walk-text .btn {
-    border: 1px solid yellow;
-    padding: 0.5rem;
-    width: 100%;
-    height: 60px;
+    padding-top: 2rem;
     border-radius: 5px;
     margin-bottom: 3rem;
     text-align: center;
     color: #F6F6F6;
     background: #22283A;
     font-size: 2rem;
+    width: 2em;
+    height: 2.5em;
+    width: 100%;
   }
 }
