--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,17 +7,17 @@
 }
 
 // Button mixin
-.button(@background, @color, @width, @height) {
-    padding: @xsmall-padding;
-    // padding-top: @small-padding;
-    width: @width;
-    height: @height;
+.button(@background, @color) {
+    // padding: @xsmall-padding;
+    padding-top: @small-padding;
     border-radius: 5px;
     margin-bottom: @medium-margin;
     text-align: center;
     color: @color;
     background: @background;
     font-size: @medium-font;
+    width: 2.0em;
+    height: 2.5em;
 }
 
 // button effects
